# TP-Sistemas-Multiagente-I

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEMO.md  README.md  REPORT.md  docker-compose.yml  pyproject.toml
containers/: Dockerfile  Dockerfile.testing
data/: init_metadata_schema.sql
docs/: REPORT.md  spec.md
src/agent/: state.py
src/agent/query_agent/: edges.py  graph.py  nodes.py  prompts.py
src/agent/schema_agent/: edges.py  graph.py  nodes.py  prompts.py
src/api/: main.py
src/api/routes/: chat.py  preferences.py  schema.py
src/app_logging/: langsmith.py  logger.py
src/config/: settings.py
src/llm/: client.py
src/memory/: __init__.py  persistent.py  short_term.py
src/tools/: mcp_client.py  mcp_server.py  sql_safety.py
src/ui/: api_client.py  app.py
src/ui/components/: chat.py  schema_review.py  sidebar.py
tests/: conftest.py
tests/functional/: test_f_health.py  test_f_mcp_tools.py  test_f_preferences.py  test_f_query_agent.py  test_f_schema_agent.py
tests/integration/: conftest.py  test_in_full_scenario.py  test_in_nl_queries.py  test_in_schema_documentation.py
tests/unit/: test_u_api_client.py  test_u_llm_client.py  test_u_memory_persistent.py  test_u_memory_short_term.py  test_u_query_nodes.py  test_u_schema_nodes.py  test_u_settings.py  test_u_sql_safety.py  test_u_state.py
